<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/singleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="8dp">

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/file_name"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_name"
            android:text="@string/language_not_specified"
            android:layout_marginStart="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/file_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/language"
            android:layout_alignStart="@+id/file_name"
            android:text="@string/file_type"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_type"
            android:layout_alignStart="@+id/file_type"
            android:text="@string/size"
            android:textSize="14sp"/>


    </RelativeLayout>

    <View
        android:layout_below="@+id/singleRow"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />


</RelativeLayout>